--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,10 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+
+/* all epigraphs */
+[epub|type~="epigraph"]{
+	font-style: italic;
+	hyphens: none;
+	-epub-hyphens: none;
+}
+/* end all epigraphs */
