--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,13 +1,10 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+@namespace xml "http://www.w3.org/XML/1998/namespace";
 
-/* all epigraphs */
-[epub|type~="epigraph"]{
+blockquote [xml|lang]{
 	font-style: italic;
-	hyphens: none;
-	-epub-hyphens: none;
 }
-/* end all epigraphs */
 
 /* poetry/song/verse */
 [epub|type~="z3998:verse"] p{
